# cpp-code

./: CMakeLists.txt  lab1.cpp
ASCII_image/: CMakeLists.txt  lab7_functions.hpp
ASCII_painter/: CMakeLists.txt  main.cpp
A_game/: CMakeLists.txt  lab9.h  lab9_skeleton.cpp  main.cpp
Fam_tree/: CMakeLists.txt  lab8.h  lab8_main.cpp  lab8_skeleton.cpp
RAT/: main.cpp  test.cpp  test.h
SoA_game/: CMakeLists.txt  main.cpp
WSC_game/: CMakeLists.txt  main.cpp
WSC_game - Copy/: main.cpp
a/: CMakeLists.txt  lab10.cpp
basics1-program/: CMakeLists.txt
connect-4/: CMakeLists.txt  main.cpp
control2-program/: CMakeLists.txt
gas_stations/: CMakeLists.txt  lab6.h  main.cpp
mgoy/: CMakeLists.txt  main.cpp
oldsiplesples/: CMakeLists.txt  main.cpp
pa1/: CMakeLists.txt  pa1.cpp
pa2/: CMakeLists.txt  pa2.cpp
pa3/: CMakeLists.txt  a.out  canvas - Copy.cpp  canvas.cpp  main.cpp  patch.cpp
pa3/example/input/: task4.txt
pa4/: CMakeLists.txt  a.out  pa4.cpp  web.cpp  web.h
quiz/: CMakeLists.txt  main.cpp
tes/: CMakeLists.txt  main.cpp
wscgame/: CMakeLists.txt  main.cpp
